 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstreamconfig.h.in, skstream/skstream_unix.h,
      skstream/skstream.h, skstream/skstream.cpp,
      skstream/skserver_unix.h, skstream/skserver.h, skstream/skserver.cpp:
      Remove as much platform sensitive code from the headers as possible,
      and simplify the generated header. Improve formatting and header
      guards for readability.
    - skstream/skserver_unix.h: Add a new constructor for unix_socket_server
      so it can be instanced without already knowing the details of the
      service.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h, skstream/skstream.cpp: Modify udp_socket_stream
      constructor so that it does not create the socket immediatly.
    - skstream/skstream.cpp: Re-write dgram_socketbuf::setTarget() so it
      uses getaddrinfo to create the socket, and get the address in
      a protocol independant way.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.h, skstream/skserver_unix.h: Add default constructor
      to tcp_socket_server, and make single argument constructors explicit.
    - skstream/skserver.cpp: Use AI_PASSIVE with getaddrinfo() to make listen
      sockets accept any connection.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skserver.cpp: Use getaddrinfo to create server sockets
      in a protocol independant way.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Use getaddrinfo to handle the port number.
 2003-08-23 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.cpp: Formating changes for clarity.
 2003-08-17 Al Riddoch <alriddoch@zepler.org>
    - Re-order contents of config header so it works on systems
      which require more headers for socklen_t.
 2003-08-16 Al Riddoch <alriddoch@zepler.org>
    - Fix packaging of skserver_unix.h.
 2003-08-09 Al Riddoch <alriddoch@zepler.org>
    - Fix conditional building of tests.